- fix hiding scrollbar when menu is open - make menu position fixed in web view and absolute in mobile view - footer icons size

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -34,9 +34,14 @@
 //     color: #9999;
 // }
 
+.disableScroll {
+    overflow-y: hidden;
+}
+
 header {
+    z-index: 10;
     font-family: sans-serif;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     padding: 0 100px;
@@ -66,6 +71,7 @@ header {
             li {
                 margin-bottom: 0;
                 list-style-type: none;
+                text-align: center;
                 a {
                     height: 50px;
                     line-height: 50px;
@@ -100,6 +106,7 @@ header {
 @media (max-width: 1180px) {
     header {
         padding: 0 20px;
+        position: absolute;
     }
 
     header nav {
