--- a/src/styles/one-of.module.scss
+++ b/src/styles/one-of.module.scss
@@ -1,6 +1,6 @@
 .caption {
     line-height: normal;
-    font-size: 12px;
+    font-size: 11px;
     color: grey;
     margin-top: -21px;
     margin-bottom: 1.45rem;
